# spatial-grid

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
examples/: example_drill.yaml  example_grid.yaml
k8s/: spatial-grid-deployment.yaml
spatial_grid/: __init__.py  cli.py  cli_drill.py  config.py  core.py  crs.py  drill.py  drill_config.py  naming.py  ui_app.py  ui_launcher.py
spatial_grid/exporters/: __init__.py  drill_3d.py  drill_export.py  drill_folium.py  excel.py  folium_map.py  gpx.py  kml.py  preview.py  shapefile.py
tests/: test_core.py  test_drill.py
